--- a/src/index.css
+++ b/src/index.css
@@ -3,12 +3,14 @@
 @import url('https://fonts.googleapis.com/css2?family=DM+Serif+Display&family=Quattrocento+Sans&display=swap');
 
 
+/* css reset */
 html,
 body{
   padding: 0;
   margin: 0;
   font-family: "Quattrocento Sans", sans-serif;
 }
+
 
 img{
   max-width: none !important;
